# PeerToPeer

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  Makefile  README.md  bootstrap_node.cpp  bootstrap_node.h  client  format.sh  main.cc  main.cpp  makefile  prod  provider  provider.out  requester  requirements.txt  subtaskData_0.txt  utility.cpp  utility.h
Networking/: .env  Makefile  ngrok_ip.py  ngrok_restart.sh  server.cpp  server.h  utility.cpp
Networking/Client/: Makefile  client.cpp  client.h
Networking/Server/: Makefile  server.cpp
Peers/: Makefile  ngrok-ip.py  peer.cpp  peer.h  provider.cpp  provider.h  requester.cpp  requester.h
Peers/Peer/: peer.cpp  peer.h
Peers/Provider/: provider.cpp  provider.h
Peers/Requester/: requester.cpp  requester.h
RequestResponse/: discovery_structs.cpp  discovery_structs.h  task_request.cpp  task_request.h  task_response.cpp  task_response.h
include/: utility.h
include/Networking/: README.md  client.h  server.h
include/Peers/: README.md  bootstrap_node.h  peer.h  provider.h  requester.h
include/RequestResponse/: README.md  acknowledgement.h  discovery_request.h  discovery_response.h  discovery_structs.h  generic_response.h  message.h  payload.h  registration.h  task_request.h  task_response.h
src/: utility.cpp
src/Networking/: client.cpp  ngrok-ip.py  ngrok_ip.py  ngrok_restart.sh  server.cpp  utility.cpp
src/Peers/: bootstrap_node.cpp  peer.cpp  provider.cpp  requester.cpp
src/RequestResponse/: discovery_request.cpp  discovery_response.cpp  discovery_structs.cpp  generic_response.cpp  message.cpp  payload.cpp  registration.cpp  task_request.cpp  task_response.cpp
